# hbba_lite

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: pull-request-audit.yaml
hbba_lite/: CMakeLists.txt  filter_states.py  package.xml
hbba_lite/hbba_lite/: filter_states.py  publishers.py  subscribers.py
hbba_lite/include/hbba_lite/core/: HbbaLite.h  RosFilterPool.h  RosStrategyStateLogger.h  Strategy.h
hbba_lite/include/hbba_lite/filters/: FilterState.h  HbbaFilterNode.h  Publishers.h  Subscribers.h
hbba_lite/launch/: test_arbitration.launch.xml  test_on_off_hbba_filter_node.launch.xml  test_throttling_hbba_filter_node.launch.xml
hbba_lite/scripts/: dummy_synchronized_publishers.py  test_arbitration_publisher.py  test_on_off_hbba_approximate_time_synchronizer.py  test_on_off_hbba_publisher.py  test_on_off_hbba_subscriber.py  test_on_off_hbba_time_synchronizer.py  test_throttling_hbba_approximate_time_synchronizer.py  test_throttling_hbba_publisher.py  test_throttling_hbba_subscriber.py  test_throttling_hbba_time_synchronizer.py
hbba_lite/src/: arbitration_node.cpp
hbba_lite/src/hbba_lite_cpp/core/: Desire.cpp  GecodeSolver.cpp  RosFilterPool.cpp  RosStrategyStateLogger.cpp  Strategy.cpp
hbba_lite/src/hbba_lite_cpp/filters/: FilterState.cpp
hbba_lite/src/hbba_lite_cpp_tests/: test_on_off_hbba_subscriber.cpp  test_throttling_hbba_publisher.cpp  test_throttling_hbba_subscriber.cpp
hbba_lite/src/rosbag2_generic_topic/: generic_publisher.cpp  generic_subscription.cpp  rosbag2_node.cpp
hbba_lite/test/hbba_lite_cpp/core/: GecodeSolverTests.cpp
hbba_lite_msgs/: CMakeLists.txt  package.xml
hbba_lite_srvs/: CMakeLists.txt  package.xml
include/hbba_lite/core/: Desire.h  DesireSet.h  GecodeSolver.h  HbbaLite.h  RosFilterPool.h  RosStrategyStateLogger.h  Solver.h  Strategy.h  StrategyStateLogger.h
include/hbba_lite/filters/: FilterState.h  HbbaFilterNode.h  Subscribers.h
include/rosbag2_generic_topic/: generic_publisher.hpp  generic_subscription.hpp  rosbag2_node.hpp
launch/: test_arbitration.launch
msg/: StrategyState.msg
scripts/: dummy_synchronized_publishers.py  test_arbitration_publisher.py  test_on_off_hbba_approximate_time_synchronizer.py  test_on_off_hbba_publisher.py  test_on_off_hbba_subscriber.py  test_on_off_hbba_time_synchronizer.py  test_throttling_hbba_approximate_time_synchronizer.py  test_throttling_hbba_publisher.py  test_throttling_hbba_subscriber.py  test_throttling_hbba_time_synchronizer.py
scripts/hbba_lite_python_tests/: test_arbitration_publisher.py
src/: arbitration_node.cpp  on_off_hbba_filter_node.cpp  throttling_hbba_filter_node.cpp
src/hbba_lite/: filter_states.py  publishers.py  subscribers.py
src/hbba_lite_cpp/core/: DesireSet.cpp  HbbaLite.cpp  RosFilterPool.cpp  RosStrategyStateLogger.cpp  Solver.cpp  Strategy.cpp  StrategyStateLogger.cpp
src/hbba_lite_cpp/filters/: FilterState.cpp
src/hbba_lite_cpp_tests/: test_on_off_hbba_publisher.cpp  test_on_off_hbba_subscriber.cpp  test_throttling_hbba_subscriber.cpp
src/rosbag2_generic_topic/: generic_publisher.cpp  generic_subscription.cpp  rosbag2_node.cpp
test/hbba_lite_cpp/core/: DesireSetTests.cpp  HbbaLiteTests.cpp  SolverTests.cpp  StrategyTests.cpp
